tests/fixtures/pass/stdlib/stdlib_async_gather_vm.walrus
import "std/async" as asyncx;

async fn left : {
    return 1;
}

async fn right : {
    return 2;
}

let both = asyncx.gather([left(), right()]);
println(await both);
