tests/fixtures/fail/stdlib/stdlib_async_race_non_task_vm.walrus
import "std/async" as asyncx;
println(await asyncx.race([1, 2]));
